<resources>
    <string name="app_name">Karya Siswa</string>
    <string name="term_and_condition"><u>Syarat dan Ketentuan</u></string>
    <string name="lupa_password"><u>Lupa password?</u></string>
    <string name="lihat_semua"><u>Lihat semua</u></string>
    <string name="lihat_semua_karya_citra"><u>Lihat semua karya visual</u></string>
    <string name="title_tambah_kategori">Tambah kategori</string>
    <string name="title_tambah_karya">Tambah karya</string>
    <string name="title_edit_karya">Ubah karya</string>
    <string name="title_hapus_karya">Hapus karya</string>
    <string name="title_nama_karya">Nama Karya</string>
    <string name="title_pilih_media_karya">Pilih media karya</string>
    <string name="txt_galeri">Galeri</string>
    <string name="txt_kamera">Kamera</string>
    <string name="txt_batal">Batal</string>
    <string name="txt_auth_dashboard">Selamat Datang di\nAplikasi Karya Siswa</string>
    <string name="txt_auth_desc">Aplikasi sebagai media untuk menampung karya-karya siswa SMK Pariwisata Islam Terpadu Nurul Imam</string>
    <string name="txt_lanjutkan">Lanjutkan</string>
    <string name="txt_kembali">Kembali</string>
    <string name="txt_pencarian_akun">Pencarian akun</string>
    <string name="txt_desc_cari_akun">Silahkan masukan alamat email untuk melakukan reset password</string>
    <string name="txt_email">Email</string>
    <string name="txt_cari_akun">Cari Akun</string>
    <string name="txt_sudah_divalidasi">Karya ini sudah divalidasi</string>
    <string name="txt_kirim">Kirim</string>
    <string name="txt_komentar">Komentar</string>
    <string name="txt_beri_komentar">Beri komentar</string>
    <string name="txt_alasan_ditolak">Alasan Ditolak</string>
    <string name="txt_kategori_karya_siswa">Kategori karya siswa</string>
    <string name="txt_karya_tulis">Karya Tulis</string>
    <string name="txt_karya_terbaru">Karya terbaru</string>
    <string name="txt_error_get_data">Terjadi kesalahan pada saat mengambil data</string>
    <string name="txt_retry">Retry</string>
    <string name="txt_karya_visual">Karya Visual</string>
    <string name="txt_unggah_karya_visual">Unggah\nKarya Visual</string>
    <string name="txt_karya_visual_masih_kosong">Karya visual masih kosong</string>
    <string name="txt_daftar_karya">Daftar Karya</string>
    <string name="txt_belum_ada_karya_yang_ditolak">Horaay, belum ada karya yang ditolak</string>
    <string name="txt_karya_tulis_masih_kosong">Karya tulis masih kosong</string>
    <string name="txt_title_login">Halo!, selamat datang kembali</string>
    <string name="txt_desc_login">Silahkan login terlebih dahulu, sebelum menggunakan aplikasi</string>
    <string name="txt_login">Login</string>
    <string name="txt_simpan_sesi_login">Simpan sesi login?</string>
    <string name="txt_edit_profile">Ubah Profil</string>
    <string name="txt_logout">Logout</string>
    <string name="txt_validasi_karya">Validasi karya</string>
    <string name="txt_desc_validasi_karya">Menu ini digunakan untuk menampilkan daftar karya siswa yang belum di validasi</string>
    <string name="txt_desc_kategori">Menu ini digunakan untuk menampilkan daftar kategori karya</string>
    <string name="txt_desc_promso">Menu ini digunakan untuk menampilkan daftar promosi</string>
    <string name="txt_lihat_detail">Lihat Detail</string>
    <string name="txt_status_karya">Status Karya</string>
    <string name="txt_pilih_karya">Pilih karya</string>
    <string name="txt_caption_karya_keterangan_karya">Caption karya/keterangan karya</string>
    <string name="txt_pilih_kategori_karya">pilih kategori karya</string>
    <string name="txt_unggah_karya">Unggah karya</string>
    <string name="txt_judul_karya">Judul Karya</string>
    <string name="txt_sumber_karya">Sumber karya</string>
    <string name="txt_unggah_karya_terbaikmu">Unggah karya terbaikmu!</string>
    <string name="txt_pilih_kategori_karya_yang_akan_diunggah">Pilih kategori karya yang akan diunggah</string>
    <string name="txt_alasan">Alasan</string>
    <string name="txt_ubah_karya">Ubah karya</string>
    <string name="txt_simpan_karya">Simpan karya</string>
    <string name="txt_edit_foto_profil">Ubah foto profil</string>
    <string name="txt_nama_lengkap">Nama Lengkap</string>
    <string name="txt_gelar">Gelar</string>
    <string name="txt_jabatan">Jabatan</string>
    <string name="txt_agama">Agama</string>
    <string name="txt_jenis_kelamin">Jenis Kelamin</string>
    <string name="txt_usia">Usia</string>
    <string name="txt_nuptk">NUPTK</string>
    <string name="txt_tempat_lahir">Tempat Lahir</string>
    <string name="txt_tanggal_lahir">Tanggal Lahir</string>
    <string name="txt_nisn">NISN</string>
    <string name="txt_lihat">Lihat</string>
    <string name="txt_hapus">Hapus</string>
    <string name="txt_judul_karya_tulis">Judul karya tulis</string>
    <string name="txt_error">Error</string>
    <string name="txt_sedang_menghapus_karya">Sedang menghapus karya…</string>
    <string name="text_sedang_logout">Sedang logout…</string>
    <string name="txt_sedang_menyimpan_karya">Sedang menyimpan karya…</string>
    <string name="txt_sedang_menunggah_karya">Sedang mengunggah karya…</string>
    <string name="txt_sedang_menambahkan_promosi">Sedang menambahkan promosi…</string>
    <string name="txt_sedang_menambahkan_karya">Sedang mengunggah karya, harap jangan keluar dari aplikasi…</string>
    <string name="txt_sedang_melakukan_validasi">Sedang melakukan validasi…</string>
    <string name="txt_home">Home</string>
    <string name="txt_profile">Profil</string>
    <string name="txt_list_karya">Eksplor Karya</string>
    <string name="txt_list_karya_ku">Karya-Ku</string>
    <string name="txt_done">Done</string>
    <string name="txt_notifikasi">Notifikasi</string>
    <string name="txt_greeting_time">Selamat, %s</string>
    <string name="txt_greeting">Halo, %s</string>
    <string name="txt_karya_masih_kosong">Karya masih kosong</string>
    <string name="txt_nama_guru" formatted="false">Halo, %s, %s</string>
    <string name="txt_nama_guru_with_param">%s, %s</string>
    <string name="txt_nuptk_with_param" formatted="false">NUPTK : %s</string>
    <string name="txt_password">Password</string>
    <string name="txt_tambah_promosi">Tambah data promosi</string>
    <string name="txt_promosi">Promosi</string>
    <string name="txt_promosi_yang_sedang_berjalan">Promosi yang sedang berjalan</string>
    <string name="txt_status_promosi">Status promosi</string>
    <string name="txt_keterangan">Keterangan</string>
    <string name="txt_nama_promosi">Nama promosi</string>
    <string name="txt_pilih_foto_gambar_promosi">Pilih foto/gambar promosi</string>
    <string name="txt_tanggal_promosi">Tanggal promosi</string>
    <string name="txt_simpan_data_promosi">Simpan data promosi</string>
    <string name="txt_edit_promosi">Ubah promosi</string>
    <string name="txt_hapus_promosi">Hapus promosi</string>
    <string name="txt_sedang_login">Sedang login…</string>
    <string name="txt_karya_ini_ditolak">Karya ini ditolak</string>
    <string name="txt_menunggu_validasi">Menunggu validasi</string>
    <string name="txt_jumlah_like">%s suka</string>
    <string name="txt_ditolak">Ditolak</string>
    <string name="txt_ya">Ya</string>
    <string name="txt_nama_kategori">Nama kategori</string>
    <string name="txt_tambah">Tambah</string>
    <string name="txt_kategori_untuk">Kategori untuk</string>
    <string name="txt_syarat_dan_ketentuan">Syarat dan Ketentuan</string>
    <string name="txt_penggunaan_aplikasi_karya_siswa">Penggunaan aplikasi karya siswa</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="saya_telah_membaca_syarat_dan_ketentuan">Saya telah membaca <b>syarat dan ketentuan</b></string>
    <string name="txt_unggah_karya_tulis">Unggah\nKarya Tulis</string>
</resources>