<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    tools:context=".presentation.fragment.siswa.kelola_karya.karya_citra.PilihanMediaKaryaBottomSheet">

    <TextView
        android:id="@+id/tv_pilihan_media"
        style="@style/TextAppearance.MaterialComponents.Body2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_pilih_media_karya"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_galeri"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="12dp"
        android:drawableTop="@drawable/ic_gallery"
        android:drawableTint="@color/primary_400"
        android:padding="12dp"
        android:text="@string/txt_galeri"
        android:textAllCaps="false"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toStartOf="@+id/btn_kamera"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_pilihan_media" />

    <Button
        android:id="@+id/btn_kamera"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:drawableTop="@drawable/ic_camera"
        android:drawableTint="@color/primary_400"

        android:padding="12dp"
        android:text="@string/txt_kamera"
        android:textAllCaps="false"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_cancel"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_galeri"
        app:layout_constraintTop_toTopOf="@+id/btn_galeri" />

    <Button
        android:id="@+id/btn_cancel"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:drawableTop="@drawable/ic_denied"
        android:drawableTint="@color/primary_400"
        android:padding="12dp"
        android:text="@string/txt_batal"
        android:textAllCaps="false"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_kamera"
        app:layout_constraintTop_toTopOf="@+id/btn_kamera" />

</androidx.constraintlayout.widget.ConstraintLayout>